Navbar fix spacing

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -200,13 +200,16 @@ nav.navigation{
                 z-index: 2;
                 height: calc(100vh);
 
+                li a{
+                    margin-bottom: 16px;
+                }
+
                 > ul{
                     margin-top: 32px;
                     display: block;
                     width: 100%;
                     flex-grow: 1;
-                    max-height: 100%;
-                    overflow-y: auto;
+
                     li.heading, li a {
                         padding: 8px 24px;
                     }
@@ -215,6 +218,10 @@ nav.navigation{
                         > ul{
                             &.collapsed{
                                 display: block;
+
+                                li a {
+                                    padding-left: 32px;
+                                }
                             }
                         }
                     }
